refactor: 일급 컬렉션의 불변성 유지를 위한 리팩터링